@@ -1,0 +1,6 @@
+5
+feet/X	1
+work/A	2  
+work/B	3
+notspecial	4
+simplenoun/A
