@@ -1,0 +1,6 @@
+5
+feet/X st:foot
+work/A    st:workverb  
+work/B    st:worknoun
+notspecial
+simplenoun/A
