@@ -1,0 +1,9 @@
+4
+four/X po:number
+five po:number
+forty four/X po:number
+forty five po:number
+fifty/X st:50
+sixty st:60
+sixty four st:64
+fifty four/X st:54
